# AdaptMath

./: .dockerignore  .env.example  .gitignore  README.md  START.md  docker-compose.yml  pyproject.toml  setup.sh  web.Dockerfile
backend/: main.py
backend/core/: config.py  jwt.py
backend/database/: init_db.py  setup_database.py
backend/database/models/: __init__.py  conversas.py  estatistica_questao.py  mensagens.py  questao_reportada.py  questao_salva.py  questoes.py  refresh_token.py  respostas_questoes.py  teste_questao.py  testes_aptidao.py  user.py
backend/enem/: enem_data.py  import_questao.py  maths.json
backend/redis/: redis.py
backend/utils/: conversas_utils.py  ia_utils.py  questoes_utils.py  user_utils.py
frontend/src/css/: dashboard.css  dashboard_aptidao.css  dashboard_conversar.css  dashboard_dados.css  dashboard_exercicios_salvos.css  dashboard_questoes.css  dashboard_relatorio.css  login.css  main.css  registro.css  teste_aptidao.css
frontend/src/js/: dashboard.js  dashboard_aptidao.js  dashboard_conversar.js  dashboard_dados.js  dashboard_exercicios_salvos.js  dashboard_questoes.js  dashboard_relatorio.js  login.js  main.js  registro.js  teste_aptidao.js  toast_func.js
frontend/templates/: dashboard.html  dashboard_aptidao.html  dashboard_conversar.html  dashboard_dados.html  dashboard_exercicios_salvos.html  dashboard_questoes.html  dashboard_relatorios.html  index.html  login.html  registro.html  teste_aptidao.html
