[project]
name = "caseorbi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "argon2-cffi>=25.1.0",
    "bcrypt==3.2.2",
    "brutils>=2.4.0",
    "flask>=3.1.3",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.2",
    "limits>=5.8.0",
    "numpy>=2.4.6",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "redis>=8.0.0",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.50",
    "tgcrypto>=1.2.5",
    "torch>=2.3.0",
    "transformers>=4.52.4",
    "uvicorn[standard]>=0.49.0",
    "werkzeug>=3.1.8",
]
